--- a/Mindenis.html
+++ b/Mindenis.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
 
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+</style>
+</head>
+<body>
+
+<ul>
+  <li><a class="active" href="https://1kaguya-sama.github.io/Alkalmi/">Alkalmi</a></li>
+  <li><a href="kigyók.html" >Kígyók</a></li>
+  <li><a href="tablazat.html">Táblázat</a></li>
+  <li><a href="color.html">Color</a></li>
+  <li><a href="lista.html">Lista</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
+
+</body>
+</html>
